--- a/ops/docker/Dockerfile.gpu_build_r_rockylinux8
+++ b/ops/docker/Dockerfile.gpu_build_r_rockylinux8
@@ -1,4 +1,4 @@
-ARG CUDA_VERSION_ARG
+ARG CUDA_VERSION_ARG=notset
 FROM nvcr.io/nvidia/cuda:$CUDA_VERSION_ARG-devel-rockylinux8
 ARG CUDA_VERSION_ARG
 ARG R_VERSION_ARG
