--- a/.github/runs-on.yml
+++ b/.github/runs-on.yml
@@ -16,7 +16,7 @@ runners:
   linux-amd64-cpu:
     cpu: 16
     family: ["c7i-flex", "c7i", "c7a", "c5", "c5a"]
-    image: ubuntu24-full-x64
+    image: linux-amd64
   linux-amd64-gpu:
     family: ["g4dn.xlarge"]
     image: linux-amd64
