--- a/ops/matrix/ci_container.yml
+++ b/ops/matrix/ci_container.yml
@@ -16,3 +16,23 @@ xgb-ci.gpu:
     CUDA_VERSION_ARG: "12.5.1"
     NCCL_VERSION_ARG: "2.22.3-1"
     RAPIDS_VERSION_ARG: "24.10"
+
+xgb-ci.cpu:
+  container_def: cpu
+
+xgb-ci.clang_tidy:
+  container_def: clang_tidy
+  build_args:
+    CUDA_VERSION_ARG: "12.5.1"
+
+xgb-ci.aarch64:
+  container_def: aarch64
+
+xgb-ci.manylinux_2_28_x86_64:
+  container_def: manylinux_2_28_x86_64
+
+xgb-ci.manylinux2014_x86_64:
+  container_def: manylinux2014_x86_64
+
+xgb-ci.manylinux2014_aarch64:
+  container_def: manylinux2014_aarch64
