--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,8 @@ jobs:
         include:
           - container_id: xgb-ci.manylinux2014_aarch64
             runner: linux-arm64-cpu
+          - container_id: xgb-ci.aarch64
+            runner: linux-arm64-cpu
     steps:
       # Restart Docker daemon so that it recognized the ephemeral disks
       - run: sudo systemctl restart docker
@@ -81,14 +83,16 @@ jobs:
           CONTAINER_ID: xgb-ci.cpu
       - run: bash ops/task/build-cpu.sh
       - name: Stash CLI executable
-        run: bash ops/stash_artifacts.sh ./xgboost
-        env:
-          COMMAND: upload
-          S3_BUCKET: ${{ env.RUNS_ON_S3_BUCKET_CACHE }}
-          PREFIX: ${{ env.ARTIFACT_STASH_PREFIX }}/build-cpu
+        run: |
+          python3 ops/stash_artifacts.py \
+            --command upload  \
+            --s3-bucket ${{ env.RUNS_ON_S3_BUCKET_CACHE }} \
+            --prefix ${{ env.ARTIFACT_STASH_PREFIX }}/build-cpu \
+            -- ./xgboost
 
   build-cpu-arm64:
     name: Build CPU ARM64 + manylinux_2_28_aarch64 wheel
+    needs: build-containers
     runs-on:
       - runs-on=${{ github.run_id }}
       - runner=linux-arm64-cpu
@@ -104,11 +108,12 @@ jobs:
           CONTAINER_ID: xgb-ci.aarch64
       - run: bash ops/task/build-cpu-arm64.sh
       - name: Stash files
-        run: bash ops/stash_artifacts.sh ./xgboost python-package/dist/*.whl
-        env:
-          COMMAND: upload
-          S3_BUCKET: ${{ env.RUNS_ON_S3_BUCKET_CACHE }}
-          PREFIX: ${{ env.ARTIFACT_STASH_PREFIX }}/build-cpu-arm64
+        run: |
+          python3 ops/stash_artifacts.py \
+            --command upload  \
+            --s3-bucket ${{ env.RUNS_ON_S3_BUCKET_CACHE }} \
+            --prefix ${{ env.ARTIFACT_STASH_PREFIX }}/build-cpu-arm64 \
+            -- ./xgboost python-package/dist/*.whl
 
   build-cuda:
     name: Build CUDA + manylinux_2_28_x86_64 wheel
@@ -132,11 +137,12 @@ jobs:
           CONTAINER_ID: xgb-ci.manylinux_2_28_x86_64
       - run: bash ops/task/build-cuda.sh
       - name: Stash files
-        run: bash ops/stash_artifacts.sh build/testxgboost python-package/dist/*.whl
-        env:
-          COMMAND: upload
-          S3_BUCKET: ${{ env.RUNS_ON_S3_BUCKET_CACHE }}
-          PREFIX: ${{ env.ARTIFACT_STASH_PREFIX }}/build-cuda
+        run: |
+          python3 ops/stash_artifacts.py \
+            --command upload  \
+            --s3-bucket ${{ env.RUNS_ON_S3_BUCKET_CACHE }} \
+            --prefix ${{ env.ARTIFACT_STASH_PREFIX }}/build-cuda \
+            -- build/testxgboost python-package/dist/*.whl
 
   build-cuda-with-rmm:
     name: Build CUDA with RMM
@@ -160,11 +166,12 @@ jobs:
           CONTAINER_ID: xgb-ci.manylinux_2_28_x86_64
       - run: bash ops/task/build-cuda-with-rmm.sh
       - name: Stash files
-        run: bash ops/stash_artifacts.sh build/testxgboost python-package/dist/*.whl
-        env:
-          COMMAND: upload
-          S3_BUCKET: ${{ env.RUNS_ON_S3_BUCKET_CACHE }}
-          PREFIX: ${{ env.ARTIFACT_STASH_PREFIX }}/build-cuda-with-rmm
+        run: |
+          python3 ops/stash_artifacts.py \
+            --command upload  \
+            --s3-bucket ${{ env.RUNS_ON_S3_BUCKET_CACHE }} \
+            --prefix ${{ env.ARTIFACT_STASH_PREFIX }}/build-cuda-with-rmm \
+            -- build/testxgboost
 
   build-jvm-manylinux2014:
     name: Build libxgboost4j.so targeting gblic 2.17
@@ -217,8 +224,8 @@ jobs:
           CONTAINER_ID: xgb-ci.manylinux2014_${{ matrix.arch }}
       - run: bash ops/task/build-manylinux2014.sh ${{ matrix.arch }}
 
-  test-gpu:
-    name: Test GPU
+  test-cpp-gpu:
+    name: Run Google Tests
     needs: build-cuda
     runs-on:
       - runs-on=${{ github.run_id }}
@@ -229,47 +236,25 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: "true"
-      - name: Unstash gtest executable
-        run: |
-          bash ops/stash_artifacts.sh ./testxgboost
-          chmod +x ./testxgboost
-        env:
-          COMMAND: download
-          S3_BUCKET: ${{ env.RUNS_ON_S3_BUCKET_CACHE }}
-          PREFIX: ${{ env.ARTIFACT_STASH_PREFIX }}/build-cuda
       - name: Fetch container from cache
         run: bash ops/docker_build.sh
         env:
           CONTAINER_ID: xgb-ci.gpu
-      - name: Run gtest
+      - name: Unstash gtest
         run: |
-          nvidia-smi
-          python3 ops/docker_run.py \
-            --container-id xgb-ci.gpu \
-            --use-gpus \
-            --run-args='--privileged' \
-            -- ./testxgboost
-
-  build-test-gpu-win64:
-    name: Build GPU (Windows)
-    runs-on:
-      - runs-on=${{ github.run_id }}
-      - runner=windows-gpu
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: "true"
-      - name: Build and run gtest
-        shell: powershell
+          python3 ops/stash_artifacts.py \
+            --command download  \
+            --s3-bucket ${{ env.RUNS_ON_S3_BUCKET_CACHE }} \
+            --prefix ${{ env.ARTIFACT_STASH_PREFIX }}/build-cuda \
+            -- build/testxgboost
+          chmod +x build/testxgboost
+      - run: bash ops/task/test-cpp-gpu.sh build-cuda
+      - name: Unstash gtest
         run: |
-          nvidia-smi
-          nvcc --version
-          git clone https://github.com/NVIDIA/cccl.git -b v2.6.1 --quiet
-          mkdir build
-          cd build
-          cmake .. -G"Visual Studio 17 2022" -A x64 -DUSE_CUDA=ON -DGOOGLE_TEST=ON -DUSE_DMLC_GTEST=ON -DBUILD_DEPRECATED_CLI=ON -DCMAKE_CUDA_ARCHITECTURES=75 -DCMAKE_PREFIX_PATH="$(Get-Location)/../cccl"
-          if ($LASTEXITCODE -ne 0) { throw "Last command failed" }
-          cmake --build . --config Release -- /m /nodeReuse:false "/consoleloggerparameters:ShowCommandLine;Verbosity=minimal"
-          if ($LASTEXITCODE -ne 0) { throw "Last command failed" }
-          & .\testxgboost.exe
-          if ($LASTEXITCODE -ne 0) { throw "Last command failed" }
+          python3 ops/stash_artifacts.py \
+            --command download  \
+            --s3-bucket ${{ env.RUNS_ON_S3_BUCKET_CACHE }} \
+            --prefix ${{ env.ARTIFACT_STASH_PREFIX }}/build-cuda-with-rmm \
+            -- build/testxgboost
+          chmod +x build/testxgboost
+      - run: bash ops/task/test-cpp-gpu.sh build-cuda-with-rmm
