--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -33,13 +33,12 @@ jobs:
       - run: powershell ops/task/build-win64-gpu.ps1
       - name: Stash files
         run: |
-          conda activate
-          python ops/stash_artifacts.py `
-            --command upload `
-            --s3-bucket ${{ env.RUNS_ON_S3_BUCKET_CACHE }} `
-            --prefix ${{ env.ARTIFACT_STASH_PREFIX }}/build-win64-gpu `
-            -- build/testxgboost.exe xgboost.exe `
+          powershell ops/stash_artifacts.ps1 `
+            build/testxgboost.exe xgboost.exe `
             (Get-ChildItem python-package/dist/*.whl | Select-Object -Expand FullName)
+        env:
+          COMMAND: upload
+          KEY: build-win64-gpu
   test-win64-gpu:
     name: Test XGBoost on Windows
     needs: build-win64-gpu
@@ -52,10 +51,9 @@ jobs:
           submodules: "true"
       - name: Unstash files
         run: |
-          conda activate
-          python ops/stash_artifacts.py `
-            --command download `
-            --s3-bucket ${{ env.RUNS_ON_S3_BUCKET_CACHE }} `
-            --prefix ${{ env.ARTIFACT_STASH_PREFIX }}/build-win64-gpu `
-            -- build/testxgboost.exe xgboost.exe python-package/dist/*.whl
+          powershell ops/stash_artifacts.ps1 `
+            build/testxgboost.exe xgboost.exe python-package/dist/*.whl
+        env:
+          COMMAND: download
+          KEY: build-win64-gpu
       - run: powershell ops/task/test-win64-gpu.ps1
