--- a/ops/docker/ci_container.yml
+++ b/ops/docker/ci_container.yml
@@ -10,6 +10,12 @@ xgb-ci.gpu_build_rockylinux8:
     NCCL_VERSION_ARG: "2.22.3-1"
     RAPIDS_VERSION_ARG: "24.10"
 
+xgb-ci.gpu_build_r_rockylinux8:
+  container_def: gpu_build_r_rockylinux8
+  build_args:
+    CUDA_VERSION_ARG: "12.5.1"
+    R_VERSION_ARG: "4.3.2"
+
 xgb-ci.gpu:
   container_def: gpu
   build_args:
